--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+*.js linguist-language=Javascript
+*.html linguist-language=HTML
+*.css linguist-language=CSS
 *.js linguist-detectable=true
 *.html linguist-detectable=true
 *.css linguist-detectable=true
